fix[update-banner]: banner and scrollbars on windows

--- a/local-plugins/update-banner/src/components/styles/update-banner.scss
+++ b/local-plugins/update-banner/src/components/styles/update-banner.scss
@@ -70,6 +70,10 @@
     color: var(--secondary);
     margin-right: 0.6rem;
     font-size: 0.55rem;
+    display: inline-block;
+    position: absolute;
+    left: -20px;
+    top: 3px;
   }
 }
 
